--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <div class="profile">
     <img src="images/puneet.png" alt="puneet-img">
     <h2>Hello.</h2>
-    <p class="intro">I am a Web Developer. I'm the founder of Aeromodelling Club in AIT Pune. I love to make websites.</p>
+    <p class="intro">I am a Web Developer. I love to make websites.</p>
   </div>
   <hr>
   <div class="skills">
