--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <div class="profile">
     <img src="images/puneet.png" alt="puneet-img">
     <h2>Hello.</h2>
-    <p class="intro">I am a Web Developer. I love to make websites.</p>
+    <p class="intro">I am a Web Developer and 3D Artist. I love to make 3D creations and websites.</p>
   </div>
   <hr>
   <div class="skills">
@@ -27,7 +27,7 @@
     <div class="skill-row">
       <img class="webd" src="images/webc.png" alt="">
       <h3>Design & Development</h3>
-      <p>I start to learn code when I was 13 years old because I want to make my own video games.Over time, I have gained a wealth of experience designing and developing web applications.</p>
+      <p>I start to learn code when I was 15 years old because I want to make my own video games.Over time, I have gained a wealth of experience designing and developing web applications.</p>
     </div>
     <div class="skill-row">
       <img class="sport" src="images/sportc.png" alt="">
